# cli-llm-assistant

./: Cargo.toml  README.md
src/: cli.rs  client.rs  completions.rs  config.rs  history.rs  main.rs  openai.rs  paths.rs  types.rs
